# stt-grpc

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml  server-build.env  server.env
proto/: batch_recognition.proto
src/: client.rs  model.rs  server.rs
