[package]
name = "STT-grpc"
version = "0.1.0"
authors = ["artemiy.bezukladnikov <abe@datacorp.ee>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.6.0"
tonic = "0.4.3"
deepspeech = "0.9.0"

[build-dependencies]
tonic-build = "0.4.2"

[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"
