[package]
name = "stt-grpc"
version = "0.1.0"
authors = ["artemiy.bezukladnikov <abe@datacorp.ee>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
tokio = {version = "1.6.0", features = ["full"]}
tonic = "0.4.3"
deepspeech = "0.9.0"
prost="0.7.0"

[build-dependencies]
tonic-build = "0.4.2"

[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"
